# ispgal

./: .gitignore  README  configure.ac
src/: Makefile.am  bitmap.h  chip.c  chip.h  ispGAL.h  ispGAL22LV10.c  ispGAL22V10.c  ispLSC.c  ispLSC.h  ispgal.c  ispgal.h  jedec.c  jedec.h  jtag.c  jtag.h  jtagkey.c  lsc-bitbang.c  lsc-bitbang.h  lsc.c  lsc.h  svf.c
